Fixed school name

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   
           <p>
             High-School Diploma <br />
-            Catholique Samuel Genest<br />
+            College Catholique Samuel Genest<br />
             Ottawa, Ontario <br />Overall grade point average of 97.2%
           </p>
               
