--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         passion for software and hardware since my high-school computing
         classes. I am an avid learner and am always looking to deepen my
         knowledge and strengthen my skills as an engineer. I complete my studies
-        Decemeber 2026.     
+        December 2026.     
       </p>
           <a href="#about"
         ><button class="btn">About Me <i class="fas fa-user"></i></button
@@ -166,7 +166,6 @@
           <p>
             High-School Diploma <br />
             College Catholique Samuel Genest<br />
-            Ottawa, Ontario <br />Overall grade point average of 97.2%
           </p>
               
         </div>
@@ -180,9 +179,9 @@
           <h3>University</h3>
                   
           <p>
-            Bachelors of applied science, Software Engineer program <br />
+            Bachelors of Applied Science, Software Engineering <br />
             University of Ottawa, Ontario <br />
-            CGPA: 9.5/10 <br />
+            CGPA: 9.4/10 <br />
             Exepcted Gradutation December 2026
           </p>
               
@@ -197,7 +196,7 @@
           <h3>Co-Op</h3>
 
           <p>
-            Currently in Search of an Interneship <br />
+            Currently in search of an interneship <br />
             Mandatory Co-Op Program <br />
           </p>
         </div>
@@ -210,15 +209,17 @@
           <h3>Website(Front End)</h3>
           <ul>
             <li class="wh">
-              Designed and built a web application with a team for a semester
-              longproject for my SEG2900 classes
-            </li>
-            <li class="wh">Self-taught HTML, CSS, and Javascript</li>
-            <li class="wh">
-              All these languages to make a fully accessible website
+              Developed a custom website from inception to launch as part of a
+              5-person team, utilizing Git to optimize collaboration and
+              efficiency
             </li>
             <li class="wh">
-              How to use Git to be able to work efficiently in a teamsetting
+              Employed industry-standard web development practices such as
+              responsive design, cross-browser compatibility, and accessibility
+            </li>
+            <li class="wh">
+              Organized weekly team meetings focused on new ideas and website
+              coding
             </li>
           </ul>
         </div>
@@ -229,9 +230,11 @@
           <h3>ITI 1520 (Python)</h3>
                   
           <p>
-            One of my assignement was to write the game Poker using Java
-            language to see the code. If you are intersed to see more project
-            don't hesatate to click the button down below
+            ➢ Programmed a fully functional BlackJack card game with an
+            interactive GUI using Python ➢ Handled user input proactively and
+            edge cases to ensure that the game processed crashes ➢ Scheduled
+            code reviews and mentored 25+ classmates to improve their learning
+            experience
           </p>
               
         </div>
@@ -239,9 +242,9 @@
         <div class="proj">
           <i class="fa-solid fa-gears"></i> <span>2022</span>
 
-          <h3>Personal website</h3>
+          <h3>Personal Website</h3>
 
-          <p>You're on looking at it</p>
+          <p>You're looking at it</p>
         </div>
       </div>
     </section>
@@ -286,7 +289,7 @@
         <form onsubmit="sendEmail()">
           <input type="text" placeholder="Name" class="box" />
           <input type="email" id="email" placeholder="Email" class="box" />
-          <input type="text" placeholder="Project" class="box" />
+          <input type="text" placeholder="Subject" class="box" />
           <textarea
             name=""
             id=""
