--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h3><span> Post : </span> Full Stack Developer</h3>
                   
           <h3><span> Language : </span> English, French and Arabic</h3>
-                  <a href="Final Resume (1).pdf" download
+                  <a href="Final Resume - Google Docs.pdf" download
             ><button class="btn">Download CV</button></a
           >
               
