--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
               <h3>
                 <i class="fa-brands fa-linkedin"></i>
                 <a
+                  class="socialslinks"
                   href="https://www.linkedin.com/in/henry-saber-786381251/
                 "
                   >Henry Saber</a
@@ -278,7 +279,9 @@
 
               <h3>
                 <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/HenrySaber/My-Projects"
+                <a
+                  class="socialslinks"
+                  href="https://github.com/HenrySaber/My-Projects"
                   >Henry Saber</a
                 >
               </h3>
